project metadata correctness, favicon update and added gap between nav items for mobile preview

--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ header {
   background: transparent;
   border-radius: 10px;
   pointer-events: auto;
+
 }
 
 #lang-select {
@@ -815,6 +816,9 @@ select option {
 }
 
 @media (max-width: 600px) {
+  .navigation {
+    gap:3rem;
+  }
   .hero-title {
     font-size: 40px;
     letter-spacing: 1px;
